[gd_scene load_steps=4 format=3]

[ext_resource type="Script" path="res://src/ui/dialog_box.gd" id="dialog_script"]
[ext_resource type="Script" path="res://src/characters/bustup_portrait.gd" id="portrait_script"]
[ext_resource type="Script" path="res://src/ui/text_renderer.gd" id="text_script"]

[node name="DialogBox" type="CanvasLayer"]
layer = 50
script = ExtResource("dialog_script")

[node name="DimBG" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.4)

[node name="Panel" type="Control" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Portrait" type="Control" parent="Panel"]
layout_mode = 0
offset_left = 25
offset_top = 50
offset_right = 345
offset_bottom = 550
script = ExtResource("portrait_script")

[node name="Body" type="TextureRect" parent="Panel/Portrait"]
layout_mode = 0
offset_right = 320
offset_bottom = 500
expand_mode = 1
stretch_mode = 5

[node name="Expression" type="TextureRect" parent="Panel/Portrait"]
layout_mode = 0
offset_left = 40
offset_top = 100
offset_right = 200
offset_bottom = 180
expand_mode = 1
stretch_mode = 5

[node name="Mouth" type="TextureRect" parent="Panel/Portrait"]
layout_mode = 0
offset_left = 40
offset_top = 170
offset_right = 200
offset_bottom = 250
expand_mode = 1
stretch_mode = 5

[node name="MouthTimer" type="Timer" parent="Panel/Portrait"]
wait_time = 0.08

[node name="TextWindowBG" type="ColorRect" parent="Panel"]
layout_mode = 0
offset_left = 25
offset_top = 490
offset_right = 1170
offset_bottom = 670
color = Color(0.05, 0.15, 0.25, 0.9)

[node name="NameLabel" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 50
offset_top = 495
offset_right = 500
offset_bottom = 540
add_theme_font_size_override/font_size = 28
add_theme_color_override/font_color = Color(0.9, 0.85, 0.3, 1)

[node name="TextDisplay" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_left = 50
offset_top = 545
offset_right = 1150
offset_bottom = 660
bbcode_enabled = true
scroll_active = false
add_theme_font_size_override/normal_font_size = 28
script = ExtResource("text_script")

[node name="ContinueIndicator" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 1100
offset_top = 630
offset_right = 1163
offset_bottom = 670
text = "â–¼"
add_theme_font_size_override/font_size = 25
